<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2013 OpenJST Project
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">OpenJST</string>
    <string name="empty"/>
    <string name="client_id">Client ID</string>
    <string name="secret_key">Password</string>
    <string name="logo">Logo</string>
    <string name="remember_me">Remember me</string>
    <string name="register_new_account">Registration</string>
    <string name="error_empty_login">Please fill clientId field</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="server">Server</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="language">Language</string>
    <string name="locale">Locale</string>
    <string name="check_updates">Check updates</string>
    <string name="account">Account</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">E-Mail</string>
    <string name="register_new_client">Register new client</string>
    <string name="schedule_today">Schedule Today</string>
    <string name="status">Status</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="connecting">Connecting...</string>
    <string name="notification_new_version">New version %s</string>
    <string name="notification_click_to_start_upgrade_to_new_version">Click to start the upgrade to the new version %s
    </string>
    <string name="units_information_byte">B</string>
    <string name="units_information_kib">KiB</string>
    <string name="units_information_mib">MiB</string>
    <string name="units_information_gib">GiB</string>
    <string name="units_information_tib">TiB</string>
    <string name="units_information_pib">PiB</string>
    <string name="units_information_eib">EiB</string>
    <string name="current_version">Current version</string>
    <string name="version">Version</string>
    <string name="code">Code</string>
    <string name="published">Published</string>
    <string name="description">Description</string>
    <string name="available_new_version">Available new version</string>
</resources>