<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2013 OpenJST Project
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/img_logo"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_alignParentTop="true"
            android:src="@drawable/dark_theme_logo"
            android:contentDescription="@string/logo"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/client_id"
            android:id="@+id/ed_client_id"
            android:layout_below="@+id/img_logo"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:inputType="text"
            android:singleLine="true"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/secret_key"
            android:id="@+id/ed_secret_key"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_below="@id/ed_client_id"
            android:inputType="textPassword"
            android:singleLine="true"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_below="@id/ed_secret_key"
            android:orientation="horizontal">

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/remember_me"
                android:id="@+id/cb_remember_me"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/btn_login"
                android:textStyle="bold"/>
    </LinearLayout>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_new_account"
            android:id="@+id/btn_register"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_alignParentBottom="true"
            android:autoLink="web"
            android:linksClickable="true"
            android:textStyle="bold"
            android:textSize="16dp"/>

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/btn_register"
            android:src="@drawable/dark_theme_bevel"
            android:background="@drawable/dark_theme_bevel"
            android:contentDescription="@string/empty"/>

</RelativeLayout>